--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@microsoft/signalr": "^10.0.0",
         "axios": "^1.6.0",
         "lucide-react": "^0.300.0",
         "react": "^18.2.0",
