--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@microsoft/signalr": "^10.0.0",
         "axios": "^1.6.0",
+        "framer-motion": "^12.33.0",
         "lucide-react": "^0.300.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
