--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "type": "module",
     "main": "api/index.js",
     "dependencies": {
+        "@supabase/supabase-js": "^2.95.3",
+        "axios": "^1.13.5",
         "cors": "^2.8.6",
-        "express": "^5.2.1"
+        "express": "^5.2.1",
+        "node-fetch": "^3.3.2"
     }
 }
