--- a/services/bot-service/package.json
+++ b/services/bot-service/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "node-fetch": "^3.3.2",
-        "@supabase/supabase-js": "^2.39.3"
+        "@supabase/supabase-js": "^2.39.3",
+        "dotenv": "^16.4.5"
     }
 }
